--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -73,13 +73,21 @@ a:hover {
 
 /* Main Content **/
 .main-content {
-    float: left;
-    background-color: #ffffff;
+   
     width:60%;
     margin: 0 15px;
-    padding: 12px;
+    padding: 10px;
     
 }
+
+   .main-content {
+    float: left;
+    background-color: #ffffff;
+        width:600px;
+        max-width: 650px;
+        margin-left: 20%;
+        position: relative;
+    }
 
 
 /** Image Container */
@@ -105,6 +113,12 @@ a:hover {
 
 .portfolio-image {
     width: 100%;
+}
+
+.about-img {
+    width: 40%;
+    float: left;
+    padding-right: 15px;
 }
 
 
@@ -204,16 +218,18 @@ textarea {
 
 
 /** media Query's **/
-@media screen and (min-width: 1227px) {
-    .main-content {
-        width:650px;
-        max-width: 650px;
-        margin-left: 20%;
-        position: relative;
-    }
-}
 
-@media screen and (max-width: 1226px) {
+
+@media screen and (max-width: 980px) {
+    .about-img{
+        width:40%;
+        float: left;
+        padding-right: 15px;
+
+
+        
+    }
+
     .main-content {
         width:80%;
         margin-left: 6%;
@@ -233,7 +249,27 @@ textarea {
     }
 }
 
-@media screen and (max-width: 612px) {
+@media screen and (max-width: 786px) {
+    .about-img{
+        width:60%;
+        padding-bottom: 15px;
+        float: left;
+        padding:15px;
+        padding-left: 0px;
+
+        
+    }
+
+
+}
+
+@media screen and (max-width: 640px) {
+    .about-img{
+        width:90%;
+        margin-left: 5%;
+        padding-bottom: 15px;
+        
+    }
 
     .masthead-navigation {
         width:90%;
